--- a/config/config.ini
+++ b/config/config.ini
@@ -1,11 +1,11 @@
 [Settings]
 open_driver = False
 open_empty_category = False
-open_filter_resolution = True
+open_filter_resolution = False
 open_filter_speed = True
 open_hotel = False
 open_hotel_foodie = False
-open_hotel_fofa = True
+open_hotel_fofa = False
 open_keep_all = False
 open_local = True
 open_m3u_result = True
@@ -29,15 +29,15 @@ final_file = output/result.txt
 hotel_num = 10
 hotel_page_num = 1
 hotel_region_list = 全部
-ipv4_num = 8
-ipv6_num = 4
+ipv4_num = 10
+ipv6_num = 2
 ipv6_support = False
 ipv_type = 全部
-ipv_type_prefer = ipv6,ipv4
+ipv_type_prefer = IPv4
 local_file = config/local.txt
 local_num = 10
 min_resolution = 1920x1080
-min_speed = 1
+min_speed = 0.5
 multicast_num = 10
 multicast_page_num = 1
 multicast_region_list = 全部
